Fix bug on leading indicators

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Set country to ADB country code of country\n",
     "country = 'ARM'"
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 1,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -187,7 +187,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<docx.text.paragraph.Paragraph at 0x27089a03bc8>"
+       "<docx.text.paragraph.Paragraph at 0x2147e137848>"
       ]
      },
      "metadata": {},
@@ -247,6 +247,26 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<pandasgui.gui.PandasGui at 0x2147e175048>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "show(df_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "################################################################################################\n",
@@ -302,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,26 +397,6 @@
     "        p.add_run(f\" On the other hand, {top_production_growth.index[i].lower()} {change[top_production_growth.index[i]]} by {abs(top_production_growth.values[i][0])}%.\")\n",
     "\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(6, 1)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "source": [
-    "policy_rate_annual.shape"
    ]
   },
   {
@@ -717,10 +717,16 @@
     "\n",
     "# 1 - Set placeholders & Qualify changes\n",
     "df_retail = monthly_data[['Retail sales']].dropna()\n",
-    "if df_retail.shape != (0, 1):\n",
+    "if (df_retail.shape != (0, 1)) & (df_consumer.shape != (0, 1)):\n",
     "    \n",
     "# 2 - Sentence stating the change in Retail sales in the last month w/ available data\n",
     "    p.add_run(f\" Retail sales {'expanded' if df_retail['Retail sales'].last('M').values[0] > 0 else 'shrank'} by {abs(df_retail['Retail sales'].last('M').values[0])}% yoy in {calendar.month_name[df_retail.last('M').index.month[0]]} ({df_retail['Retail sales'].last('2Q').values[0]}% yoy in {calendar.month_name[df_retail.last('2M').index.month[0]]}).\")\n",
+    "\n",
+    "elif (df_retail.shape != (0, 1)) & (df_consumer.shape == (0, 1)):\n",
+    "\n",
+    "    p = doc.add_heading(f\"Leading indicators\", level=2)\n",
+    "\n",
+    "    p = doc.add_paragraph(f\"Retail sales {'expanded' if df_retail['Retail sales'].last('M').values[0] > 0 else 'shrank'} by {abs(df_retail['Retail sales'].last('M').values[0])}% yoy in {calendar.month_name[df_retail.last('M').index.month[0]]} ({df_retail['Retail sales'].last('2Q').values[0]}% yoy in {calendar.month_name[df_retail.last('2M').index.month[0]]}).\")\n",
     "    \n",
     "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
    ]
@@ -737,10 +743,17 @@
     "\n",
     "# 1 - Set placeholders & Qualify changes\n",
     "df_production = monthly_data[['Industrial production']].dropna()\n",
-    "if df_production.shape != (0, 1):\n",
+    "if (df_production.shape != (0, 1)) & (df_retail.shape != (0, 1)) & (df_consumer.shape != (0, 1)):\n",
     "    \n",
     "# 2 - Sentence stating the change in Industrial production in the last month w/ available data\n",
     "    p.add_run(f\" Industrial production {'expanded' if df_production['Industrial production'].last('M').values[0] > 0 else 'shrank'} by {abs(df_production['Industrial production'].last('M').values[0])}% yoy in {calendar.month_name[df_production.last('M').index.month[0]]} ({df_production['Industrial production'].last('2Q').values[0]}% yoy in {calendar.month_name[df_production.last('2M').index.month[0]]}).\")\n",
+    "\n",
+    "elif (df_production.shape != (0, 1)) & (df_retail.shape == (0, 1)) & (df_consumer.shape == (0, 1)):\n",
+    "\n",
+    "    p = doc.add_heading(f\"Leading indicators\", level=2)\n",
+    "\n",
+    "    p= doc.add_paragraph(f\"Industrial production {'expanded' if df_production['Industrial production'].last('M').values[0] > 0 else 'shrank'} by {abs(df_production['Industrial production'].last('M').values[0])}% yoy in {calendar.month_name[df_production.last('M').index.month[0]]} ({df_production['Industrial production'].last('2Q').values[0]}% yoy in {calendar.month_name[df_production.last('2M').index.month[0]]}).\")\n",
+    "\n",
     "    \n",
     "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
    ]
