Fix bug in quarterly GDP growth section

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -3,7 +3,7 @@
   {
    "source": [
     "# Set country to ADB country code of country\n",
-    "country = 'ARM'"
+    "country = 'MAL'"
    ],
    "cell_type": "code",
    "metadata": {},
@@ -187,7 +187,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<docx.text.paragraph.Paragraph at 0x2147e137848>"
+       "<docx.text.paragraph.Paragraph at 0x22d86d64848>"
       ]
      },
      "metadata": {},
@@ -252,7 +252,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<pandasgui.gui.PandasGui at 0x2147e175048>"
+       "<pandasgui.gui.PandasGui at 0x22d86d60168>"
       ]
      },
      "metadata": {},
@@ -652,9 +652,9 @@
     "# 2 - Demand-side GDP: Create dataframe for top growth rate items\n",
     "top_demand_growth_quarterly = []\n",
     "if df_gdp_growth_quarterly[item].last('Q').values[0] > 0:\n",
-    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in df_gdp_growth_quarterly.columns if item != 'GDP growth']].transpose().sort_index(ascending=False)\n",
+    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in df_gdp_growth_quarterly.columns if item != 'GDP growth']].transpose().sort_values(by=df_gdp_growth_quarterly.last('Q').index[0], ascending=False)\n",
     "else:\n",
-    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in df_gdp_growth_quarterly.columns if item != 'GDP growth']].transpose().sort_index(ascending=True)\n",
+    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in df_gdp_growth_quarterly.columns if item != 'GDP growth']].transpose().sort_values(by=df_gdp_growth_quarterly.last('Q').index[0], ascending=True)\n",
     "\n",
     "# 3 - Heading stating if GDP increased/decreasesd in last quarter w/ available data\n",
     "p = doc.add_heading(f\"Output {'contracted' if df_gdp_growth_quarterly['GDP growth'].last('Q').values[0] < 0 else 'picked up'} in Q{df_gdp_growth_quarterly.last('Q').index.quarter[0]} {df_gdp_growth_quarterly.last('Q').index.year[0]}\", level=1)\n",
@@ -671,7 +671,7 @@
     "# 7 - Sentence on other large contributors to GDP change in last available quarter\n",
     "i = 1\n",
     "while np.sign(top_demand_growth_quarterly.values[i][0]) == np.sign(np.sign(df_gdp_growth_quarterly['GDP growth'].last('Q').values[0])):\n",
-    "    p.add_run(f\" {top_demand_growth_quarterly.index[i]} {change[top_demand_growth_quarterly.index[i]]} by {top_demand_growth_quarterly.values[i][0]}%.\") \n",
+    "    p.add_run(f\" {top_demand_growth_quarterly.index[i]} {change[top_demand_growth_quarterly.index[i]]} by {abs(top_demand_growth_quarterly.values[i][0])}%.\") \n",
     "    i += 1\n",
     "    if i >= len(top_demand_growth_quarterly) - 2:\n",
     "        break\n",
